Put back z-index to fix created bugs

--- a/resources/styles/pageblocks/blog.scss
+++ b/resources/styles/pageblocks/blog.scss
@@ -1,7 +1,7 @@
 section.blog {
     height: 70vh;
     background-color: $primary-950;
-    z-index: -999;
+ 
 
     .container {
         display: flex;
