--- a/resources/styles/pageblocks/contact.scss
+++ b/resources/styles/pageblocks/contact.scss
@@ -1,5 +1,5 @@
 section.contact {
-    z-index: -999;
+  
 
     .container {
         width: 50%;
