--- a/resources/styles/pageblocks/footer.scss
+++ b/resources/styles/pageblocks/footer.scss
@@ -1,5 +1,5 @@
 footer.content-info {
-    z-index: -999;
+   
     display: flex;
     justify-content: center;
     align-items: center;
