--- a/resources/styles/pageblocks/hero.scss
+++ b/resources/styles/pageblocks/hero.scss
@@ -1,7 +1,8 @@
 section.hero {
     width: 100%;
     height: 90vh;
-    z-index: -999;
+
+   
 
 
     display: flex;
