--- a/resources/styles/pageblocks/pricing.scss
+++ b/resources/styles/pageblocks/pricing.scss
@@ -1,5 +1,5 @@
 section.pricing {
-    z-index: -999;
+   
 
     .container {
         display: flex;
