--- a/resources/styles/pageblocks/products.scss
+++ b/resources/styles/pageblocks/products.scss
@@ -1,5 +1,5 @@
 section.products {
-    z-index: -999;
+   
 
         .container {
 
